--- a/public/lang/cn/faq/index.html
+++ b/public/lang/cn/faq/index.html
@@ -209,7 +209,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">是否有详细的指南，以便我可以遵循？</p>
 
 						<!-- arrow icon -->
@@ -229,7 +229,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">键盘映射说明</p>
 
 						<!-- arrow icon -->
@@ -240,7 +240,7 @@
 
 					<!-- answer -->
 					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
-						<p class="pl-3 mb-10 border-l-4 rounded-sm border-menu-pink ">最后更新的版本 0.7.3</p>
+						<p class="pl-3 mb-10 border-l-4 rounded-sm border-text-purple ">最后更新的版本 0.7.3</p>
 
 						<ul class="list-inside list-disc">
 							<h2 class="text-xl font-bold">按键器切换</h2>
@@ -296,7 +296,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">什么是PlayCover的捐赠版本？</p>
 
 						<!-- arrow icon -->
@@ -314,7 +314,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">下一个版本的Playcover何时发布？</p>
 
 						<!-- arrow icon -->
@@ -332,7 +332,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我是否必须禁用SIP（系统完整性保护），这样做是否安全？</p>
 
 						<!-- arrow icon -->
@@ -350,7 +350,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我怎样才能更改原神的设置？</p>
 
 						<!-- arrow icon -->
@@ -368,7 +368,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我应该如何添加鼠标左键或右键映射？</p>
 
 						<!-- arrow icon -->
@@ -386,7 +386,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">视角在游戏中的移动不正常？</p>
 
 						<!-- arrow icon -->
@@ -407,7 +407,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我已经按照视频中的所有步骤正确操作了，但我的键位绑定仍然不工作？</p>
 
 						<!-- arrow icon -->
@@ -425,7 +425,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">即使我做了所有的步骤都正确，PlayCover还是不工作（甚至故障排除说我的系统是正确的）？</p>
 
 						<!-- arrow icon -->
@@ -443,7 +443,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">每次发布PlayCover，我都要重新安装原神吗？</p>
 
 						<!-- arrow icon -->
@@ -461,7 +461,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我如何重设「sudo nvram boot-args…」命令？</p>
 
 						<!-- arrow icon -->
@@ -481,7 +481,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">为什么我在重启或打开Mac时看到一大串代码？</p>
 
 						<!-- arrow icon -->
@@ -505,7 +505,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">当我的密码为空时，我不能禁用SIP，也不能添加启动参数吗？</p>
 
 						<!-- arrow icon -->
@@ -523,7 +523,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我得到了『此应用程序不支持在此Mac上』的错误？</p>
 
 						<!-- arrow icon -->
@@ -541,7 +541,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我遇到了『你没有权限』的错误？</p>
 
 						<!-- arrow icon -->
@@ -577,7 +577,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我的键盘映射在原神中表现得很奇怪，重新启动应用程序和Mac也没有帮助？</p>
 
 						<!-- arrow icon -->
@@ -775,7 +775,7 @@
 		<!-- fixer for css classes used in js files but not compiled by tailwind-->
 		<!-- when JIT watch mode is run again, it checks html file and removes all the classes from styles.css that doesn't exist in the html file even tho they exist in the js files hence it breaks stuff -->
 		<!-- add the classes used in js files here to fix -->
-		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#222222] animate-bounce animate-pulse"></div>
+		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#222222] animate-bounce animate-pulse dark:border-pastel-pink"></div>
 
 		<!-- js -->
 		<script src="/js/load-transitions.js"></script>
