--- a/public/lang/id/faq/index.html
+++ b/public/lang/id/faq/index.html
@@ -209,7 +209,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Apakah ada guide yang bisa diikuti?</p>
 
 						<!-- arrow icon -->
@@ -229,7 +229,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Petunjuk Keybindings</p>
 
 						<!-- arrow icon -->
@@ -240,7 +240,7 @@
 
 					<!-- answer -->
 					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
-						<p class="pl-3 mb-10 border-l-4 rounded-sm border-menu-pink ">Terakhir diupdate untuk versi 0.7.0</p>
+						<p class="pl-3 mb-10 border-l-4 rounded-sm border-text-purple ">Terakhir diupdate untuk versi 0.7.0</p>
 
 						<ul class="list-inside list-disc">
 							<h2 class="text-xl font-bold">Tombol Keymapper</h2>
@@ -296,7 +296,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Apa itu PlayCover versi supporter?</p>
 
 						<!-- arrow icon -->
@@ -314,7 +314,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Kapan versi PlayCover selanjutnya akan rilis?</p>
 
 						<!-- arrow icon -->
@@ -332,7 +332,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Apakah SIP (System Integrity Protection) harus di disable? Apakah itu aman?</p>
 
 						<!-- arrow icon -->
@@ -350,7 +350,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Bagaimana cara mengatur pengaturan Genshin?</p>
 
 						<!-- arrow icon -->
@@ -368,7 +368,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Gimana cara menambahkan klik kiri dan kanan?</p>
 
 						<!-- arrow icon -->
@@ -386,7 +386,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Gerakan kamera tidak berfungsi di game?</p>
 
 						<!-- arrow icon -->
@@ -407,7 +407,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Semua langkah yang ditampilkan di video sudah dijalankan dengan benar tapi keybindings masih tidak berfungsi.</p>
 
 						<!-- arrow icon -->
@@ -425,7 +425,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">PlayCover tidak berjalan meskipun sudah mengikuti petunjuk dengan benar (troubleshoot juga menunjukkan sistem sudah benar)</p>
 
 						<!-- arrow icon -->
@@ -443,7 +443,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Apakah Genshin Impact harus reinstall tiap rilis PlayCover terbaru?</p>
 
 						<!-- arrow icon -->
@@ -461,7 +461,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Bagaimana cara reset command “sudo nvram boot-args…”?</p>
 
 						<!-- arrow icon -->
@@ -481,7 +481,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Kenapa ada teks random muncul saat Mac di restart atau dinyalakan?</p>
 
 						<!-- arrow icon -->
@@ -504,7 +504,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">SIP tidak bisa disable dan tidak bisa menambah boot-args karena *blank password*</p>
 
 						<!-- arrow icon -->
@@ -522,7 +522,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Error “This application is not supported on this Mac” muncul.</p>
 
 						<!-- arrow icon -->
@@ -540,7 +540,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Error “You do not have permission” muncul</p>
 
 						<!-- arrow icon -->
@@ -574,7 +574,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Keybindings di Genshin Impact bertingkah aneh dan restart app dan Mac tidak membantu</p>
 
 						<!-- arrow icon -->
@@ -723,7 +723,7 @@
 		<!-- fixer for css classes used in js files but not compiled by tailwind-->
 		<!-- when JIT watch mode is run again, it checks html file and removes all the classes from styles.css that doesn't exist in the html file even tho they exist in the js files hence it breaks stuff -->
 		<!-- add the classes used in js files here to fix -->
-		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#222222] animate-bounce animate-pulse"></div>
+		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#222222] animate-bounce animate-pulse dark:border-pastel-pink"></div>
 
 		<!-- js -->
 		<script src="/js/load-transitions.js"></script>
