--- a/public/lang/ru/faq/index.html
+++ b/public/lang/ru/faq/index.html
@@ -213,7 +213,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Есть ли пошаговая инструкция?</p>
 
 						<!-- arrow icon -->
@@ -233,7 +233,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Инструкция по назначению клавиш</p>
 
 						<!-- arrow icon -->
@@ -244,7 +244,7 @@
 
 					<!-- answer -->
 					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
-						<p class="pl-3 mb-10 border-l-4 rounded-sm border-menu-pink ">Последнее обновление для версии 0.7.3</p>
+						<p class="pl-3 mb-10 border-l-4 rounded-sm border-text-purple ">Последнее обновление для версии 0.7.3</p>
 
 						<ul class="list-inside list-disc">
 							<h2 class="text-xl font-bold">Включение настройщика клавиатуры</h2>
@@ -300,7 +300,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Что такое версия PlayCover для спонсоров?</p>
 
 						<!-- arrow icon -->
@@ -318,7 +318,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Когда будет выпущена новая версия PlayCover?</p>
 
 						<!-- arrow icon -->
@@ -336,7 +336,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Нужно ли мне отключать SIP (System Integrity Protection) и безопасно ли это?</p>
 
 						<!-- arrow icon -->
@@ -354,7 +354,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Как мне поменять настройки Genshin Impact?</p>
 
 						<!-- arrow icon -->
@@ -372,7 +372,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Как мне добавить левую и правую кнопки мыши?</p>
 
 						<!-- arrow icon -->
@@ -390,7 +390,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Что делать, если в игре не работает камера?</p>
 
 						<!-- arrow icon -->
@@ -411,7 +411,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Я четко следовал инструкции на видео, но привязка клавиатуры все равно не работает?</p>
 
 						<!-- arrow icon -->
@@ -429,7 +429,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">PlayCover не работает, хотя я выполнил все шаги правильно (даже в результатах диагностики сказано, что моя система настроена правильно)?</p>
 
 						<!-- arrow icon -->
@@ -447,7 +447,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Нужно ли мне переустанавливать Genshin Impact каждый раз, когда выходит новая версия PlayCover?</p>
 
 						<!-- arrow icon -->
@@ -465,7 +465,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Как мне отменить команду "sudo nvram boot-args..."</p>
 
 						<!-- arrow icon -->
@@ -485,7 +485,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Почему я вижу текст при перезагрузке или включении Mac?</p>
 
 						<!-- arrow icon -->
@@ -508,7 +508,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Я не могу отключить SIP или добавить boot-args из-за пустого места вместо пароля?</p>
 
 						<!-- arrow icon -->
@@ -526,7 +526,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">У меня появляется ошибка «Это приложение не поддерживается на этом Mac»?</p>
 
 						<!-- arrow icon -->
@@ -544,7 +544,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">У меня появляется ошибка «У вас нет разрешения»?</p>
 
 						<!-- arrow icon -->
@@ -578,7 +578,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-menu-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Моя привязка клавиш в Genshin Impact работает странно, и перезапуск приложения и компьютера не помогает?</p>
 
 						<!-- arrow icon -->
@@ -729,7 +729,7 @@
 		<!-- fixer for css classes used in js files but not compiled by tailwind-->
 		<!-- when JIT watch mode is run again, it checks html file and removes all the classes from styles.css that doesn't exist in the html file even tho they exist in the js files hence it breaks stuff -->
 		<!-- add the classes used in js files here to fix -->
-		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#222222] animate-bounce animate-pulse"></div>
+		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#222222] animate-bounce animate-pulse dark:border-pastel-pink"></div>
 
 		<!-- js -->
 		<script src="/js/load-transitions.js"></script>
